--- a/submit/prj1-sol/package.json
+++ b/submit/prj1-sol/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prj1-sol",
   "version": "1.0.0",
-  "description": "Name:\t\tXXX B-Number:\tXXX Email:\t\tXXX",
+  "description": "Name:Vivek Reddy Chenreddy  B-Number:\tB00859293 Email:\t\tvchenre1@binghamton.edu",
   "main": "index.js",
   "directories": {
     "test": "test"
