--- a/submit/prj2-sol/package.json
+++ b/submit/prj2-sol/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^9.0.0"
+    "mocha": "^9.0.0",
+    "nyc": "^15.1.0"
   },
   "test": "mocha test/",
   "debug-test": "mocha --inspect-brk test/",
